--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@
 #
 
 # Delphi compiler-generated binaries (safe to delete)
-*.exe
+#*.exe
 *.dll
 *.bpl
 *.bpi
@@ -61,6 +61,7 @@
 __history/
 __recovery/
 *.~*
+backup/
 
 # Castalia statistics file (since XE7 Castalia is distributed with Delphi)
 *.stat
