--- a/RomLink/RomLink.lpi
+++ b/RomLink/RomLink.lpi
@@ -13,7 +13,7 @@
       <Language Value=""/>
       <CharSet Value=""/>
     </VersionInfo>
-    <BuildModes Count="3" Active="Debug">
+    <BuildModes Count="3">
       <Item1 Name="default" Default="True"/>
       <Item2 Name="Debug">
         <CompilerOptions>
@@ -69,6 +69,9 @@
           </Parsing>
           <CodeGeneration>
             <SmartLinkUnit Value="True"/>
+            <Checks>
+              <RangeChecks Value="True"/>
+            </Checks>
             <Optimizations>
               <OptimizationLevel Value="3"/>
             </Optimizations>
@@ -88,14 +91,14 @@
     </PublishOptions>
     <RunParams>
       <local>
-        <CommandLineParams Value="..\RomBuild\cfch2.txt ..\RomBuild\mcbd.rom ..\RomBuild\cfch2.rom -v $30"/>
+        <CommandLineParams Value="..\RomBuild\cfch2.txt ..\RomBuild\mcbd.rom ..\RomBuild\cfch2.rom -s ..\RomBuild\cfch2_s.txt"/>
         <LaunchingApplication PathPlusParams="\usr\X11R6\bin\xterm -T 'Lazarus Run Output' -e $(LazarusDir)\tools\runwait.sh $(TargetCmdLine)"/>
       </local>
       <FormatVersion Value="2"/>
       <Modes Count="1">
         <Mode0 Name="default">
           <local>
-            <CommandLineParams Value="..\RomBuild\cfch2.txt ..\RomBuild\mcbd.rom ..\RomBuild\cfch2.rom -v $30"/>
+            <CommandLineParams Value="..\RomBuild\cfch2.txt ..\RomBuild\mcbd.rom ..\RomBuild\cfch2.rom -s ..\RomBuild\cfch2_s.txt"/>
             <LaunchingApplication PathPlusParams="\usr\X11R6\bin\xterm -T 'Lazarus Run Output' -e $(LazarusDir)\tools\runwait.sh $(TargetCmdLine)"/>
           </local>
         </Mode0>
@@ -109,12 +112,12 @@
         <PackageName Value="LCLBase"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="14">
+    <Units Count="21">
       <Unit0>
         <Filename Value="RomLink.pas"/>
         <IsPartOfProject Value="True"/>
-        <TopLine Value="289"/>
-        <CursorPos X="17" Y="254"/>
+        <TopLine Value="508"/>
+        <CursorPos X="59" Y="545"/>
         <UsageCount Value="240"/>
         <Loaded Value="True"/>
       </Unit0>
@@ -122,11 +125,11 @@
         <Filename Value="RomList.pas"/>
         <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
-        <TopLine Value="1111"/>
-        <CursorPos X="71" Y="1151"/>
+        <TopLine Value="558"/>
+        <CursorPos Y="575"/>
         <UsageCount Value="120"/>
         <Bookmarks Count="1">
-          <Item0 X="58" Y="787"/>
+          <Item0 X="58" Y="880"/>
         </Bookmarks>
         <Loaded Value="True"/>
       </Unit1>
@@ -134,64 +137,68 @@
         <Filename Value="Utils.pas"/>
         <TopLine Value="44"/>
         <CursorPos X="10" Y="25"/>
-        <UsageCount Value="50"/>
+        <UsageCount Value="40"/>
       </Unit2>
       <Unit3>
         <Filename Value="RamothMemoryStream.pas"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="281"/>
         <CursorPos X="35" Y="291"/>
-        <UsageCount Value="60"/>
+        <UsageCount Value="50"/>
       </Unit3>
       <Unit4>
         <Filename Value="DragonCoCoCasUnit.pas"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="344"/>
         <CursorPos X="44" Y="360"/>
-        <UsageCount Value="52"/>
+        <UsageCount Value="42"/>
       </Unit4>
       <Unit5>
         <Filename Value="RamothStringListUnit.pas"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="35"/>
         <CursorPos Y="56"/>
-        <UsageCount Value="44"/>
+        <UsageCount Value="34"/>
       </Unit5>
       <Unit6>
         <Filename Value="..\CasLib\DragonCoCoCasUnit.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="26"/>
-        <CursorPos X="9" Y="47"/>
+        <EditorIndex Value="5"/>
+        <TopLine Value="249"/>
+        <CursorPos X="39" Y="369"/>
         <UsageCount Value="101"/>
+        <Loaded Value="True"/>
       </Unit6>
       <Unit7>
         <Filename Value="..\Libs\RamothMemoryStream.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="317"/>
-        <CursorPos X="11" Y="327"/>
-        <UsageCount Value="100"/>
+        <EditorIndex Value="3"/>
+        <TopLine Value="14"/>
+        <CursorPos X="21" Y="32"/>
+        <UsageCount Value="113"/>
+        <Loaded Value="True"/>
       </Unit7>
       <Unit8>
         <Filename Value="..\Libs\RamothStringListUnit.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="44"/>
-        <CursorPos X="20" Y="72"/>
-        <UsageCount Value="11"/>
+        <EditorIndex Value="2"/>
+        <TopLine Value="74"/>
+        <CursorPos X="41" Y="88"/>
+        <UsageCount Value="47"/>
+        <Loaded Value="True"/>
       </Unit8>
       <Unit9>
         <Filename Value="..\CasLib\DragonCoCoCasNameBlockUnit.pas"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="142"/>
         <CursorPos X="35" Y="167"/>
-        <UsageCount Value="101"/>
+        <UsageCount Value="91"/>
       </Unit9>
       <Unit10>
         <Filename Value="RLECompressUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="228"/>
-        <CursorPos X="27" Y="238"/>
+        <EditorIndex Value="4"/>
+        <TopLine Value="62"/>
+        <CursorPos X="26" Y="81"/>
         <UsageCount Value="213"/>
+        <Loaded Value="True"/>
       </Unit10>
       <Unit11>
         <Filename Value="consoleutils.pas"/>
@@ -207,77 +214,190 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="1027"/>
         <CursorPos X="14" Y="1049"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="0"/>
       </Unit12>
       <Unit13>
         <Filename Value="..\Libs\ramothcustomapplicationunit.pas"/>
         <UnitName Value="RamothCustomApplicationUnit"/>
         <EditorIndex Value="-1"/>
         <CursorPos X="33"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="0"/>
       </Unit13>
+      <Unit14>
+        <Filename Value="dragondosmmcbinfileunit.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="DragonDOSMMCBinFileUnit"/>
+        <EditorIndex Value="6"/>
+        <TopLine Value="93"/>
+        <CursorPos X="49" Y="125"/>
+        <UsageCount Value="122"/>
+        <Loaded Value="True"/>
+      </Unit14>
+      <Unit15>
+        <Filename Value="d:\lazarus\fpc\3.2.0\source\rtl\objpas\classes\classesh.inc"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="740"/>
+        <CursorPos X="15" Y="756"/>
+        <UsageCount Value="8"/>
+      </Unit15>
+      <Unit16>
+        <Filename Value="d:\lazarus\lcl\include\interfacebase.inc"/>
+        <EditorIndex Value="-1"/>
+        <CursorPos Y="24"/>
+        <UsageCount Value="3"/>
+      </Unit16>
+      <Unit17>
+        <Filename Value="d:\lazarus\lcl\interfaces\win32\win32object.inc"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="19"/>
+        <CursorPos Y="46"/>
+        <UsageCount Value="3"/>
+      </Unit17>
+      <Unit18>
+        <Filename Value="d:\lazarus\lcl\forms.pp"/>
+        <UnitName Value="Forms"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="2205"/>
+        <CursorPos Y="2224"/>
+        <UsageCount Value="3"/>
+      </Unit18>
+      <Unit19>
+        <Filename Value="d:\lazarus\lcl\interfaces\win32\win32int.pp"/>
+        <UnitName Value="Win32Int"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="320"/>
+        <CursorPos Y="357"/>
+        <UsageCount Value="3"/>
+      </Unit19>
+      <Unit20>
+        <Filename Value="d:\lazarus\fpc\3.2.0\source\rtl\inc\mathh.inc"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="31"/>
+        <CursorPos X="14" Y="116"/>
+        <UsageCount Value="4"/>
+      </Unit20>
     </Units>
-    <JumpHistory Count="15" HistoryIndex="14">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="RomLink.pas"/>
-        <Caret Line="254" Column="17" TopLine="289"/>
+        <Caret Line="322" TopLine="304"/>
       </Position1>
       <Position2>
-        <Filename Value="RomList.pas"/>
-        <Caret Line="27" TopLine="176"/>
+        <Filename Value="RomLink.pas"/>
+        <Caret Line="457" TopLine="439"/>
       </Position2>
       <Position3>
-        <Filename Value="RomList.pas"/>
-        <Caret Line="45" Column="14" TopLine="380"/>
+        <Filename Value="RomLink.pas"/>
+        <Caret Line="454" TopLine="439"/>
       </Position3>
       <Position4>
         <Filename Value="RomList.pas"/>
-        <Caret Line="197" Column="30" TopLine="177"/>
+        <Caret Line="728" Column="5" TopLine="709"/>
       </Position4>
       <Position5>
         <Filename Value="RomList.pas"/>
-        <Caret Line="400" Column="31" TopLine="363"/>
+        <Caret Line="681" TopLine="681"/>
       </Position5>
       <Position6>
         <Filename Value="RomList.pas"/>
-        <Caret Line="709" Column="28" TopLine="678"/>
+        <Caret Line="720" Column="9" TopLine="1135"/>
       </Position6>
       <Position7>
         <Filename Value="RomList.pas"/>
-        <Caret Line="35" Column="16" TopLine="13"/>
+        <Caret Line="723" Column="47" TopLine="685"/>
       </Position7>
       <Position8>
-        <Filename Value="RomList.pas"/>
-        <Caret Line="117" Column="11" TopLine="95"/>
+        <Filename Value="..\Libs\RamothStringListUnit.pas"/>
+        <Caret Line="22" Column="28" TopLine="3"/>
       </Position8>
       <Position9>
         <Filename Value="RomList.pas"/>
-        <Caret Line="51" Column="19" TopLine="22"/>
+        <Caret Line="705" TopLine="698"/>
       </Position9>
       <Position10>
-        <Filename Value="RomList.pas"/>
-        <Caret Line="313" Column="17" TopLine="283"/>
+        <Filename Value="..\Libs\RamothStringListUnit.pas"/>
+        <Caret Line="92" TopLine="68"/>
       </Position10>
       <Position11>
-        <Filename Value="RomList.pas"/>
-        <Caret Line="715" Column="26" TopLine="678"/>
+        <Filename Value="..\Libs\RamothStringListUnit.pas"/>
+        <Caret Line="93" TopLine="68"/>
       </Position11>
       <Position12>
-        <Filename Value="RomList.pas"/>
-        <Caret Line="738" Column="26" TopLine="701"/>
+        <Filename Value="..\Libs\RamothStringListUnit.pas"/>
+        <Caret Line="94" TopLine="68"/>
       </Position12>
       <Position13>
-        <Filename Value="RomList.pas"/>
-        <Caret Line="756" Column="33" TopLine="719"/>
+        <Filename Value="..\Libs\RamothStringListUnit.pas"/>
+        <Caret Line="64" TopLine="45"/>
       </Position13>
       <Position14>
-        <Filename Value="RomList.pas"/>
-        <Caret Line="841" Column="26" TopLine="804"/>
+        <Filename Value="..\Libs\RamothStringListUnit.pas"/>
+        <Caret Line="53" TopLine="45"/>
       </Position14>
       <Position15>
-        <Filename Value="RomList.pas"/>
-        <Caret Line="870" Column="26" TopLine="833"/>
+        <Filename Value="..\Libs\RamothStringListUnit.pas"/>
+        <Caret Line="54" TopLine="45"/>
       </Position15>
+      <Position16>
+        <Filename Value="..\Libs\RamothStringListUnit.pas"/>
+        <Caret Line="55" TopLine="45"/>
+      </Position16>
+      <Position17>
+        <Filename Value="..\Libs\RamothStringListUnit.pas"/>
+        <Caret Line="56" TopLine="45"/>
+      </Position17>
+      <Position18>
+        <Filename Value="..\Libs\RamothStringListUnit.pas"/>
+        <Caret Line="58" TopLine="45"/>
+      </Position18>
+      <Position19>
+        <Filename Value="..\Libs\RamothStringListUnit.pas"/>
+        <Caret Line="53" TopLine="45"/>
+      </Position19>
+      <Position20>
+        <Filename Value="..\Libs\RamothStringListUnit.pas"/>
+        <Caret Line="60" TopLine="45"/>
+      </Position20>
+      <Position21>
+        <Filename Value="..\Libs\RamothStringListUnit.pas"/>
+        <Caret Line="53" TopLine="45"/>
+      </Position21>
+      <Position22>
+        <Filename Value="..\Libs\RamothStringListUnit.pas"/>
+        <Caret Line="60" TopLine="45"/>
+      </Position22>
+      <Position23>
+        <Filename Value="..\Libs\RamothStringListUnit.pas"/>
+        <Caret Line="66" TopLine="45"/>
+      </Position23>
+      <Position24>
+        <Filename Value="..\Libs\RamothStringListUnit.pas"/>
+        <Caret Line="72" TopLine="51"/>
+      </Position24>
+      <Position25>
+        <Filename Value="..\Libs\RamothStringListUnit.pas"/>
+        <Caret Line="73" TopLine="51"/>
+      </Position25>
+      <Position26>
+        <Filename Value="..\Libs\RamothStringListUnit.pas"/>
+        <Caret Line="75" TopLine="51"/>
+      </Position26>
+      <Position27>
+        <Filename Value="..\Libs\RamothStringListUnit.pas"/>
+        <Caret Line="76" TopLine="51"/>
+      </Position27>
+      <Position28>
+        <Filename Value="..\Libs\RamothStringListUnit.pas"/>
+        <Caret Line="67" TopLine="51"/>
+      </Position28>
+      <Position29>
+        <Filename Value="..\Libs\RamothStringListUnit.pas"/>
+        <Caret Line="93" TopLine="74"/>
+      </Position29>
+      <Position30>
+        <Filename Value="RomLink.pas"/>
+        <Caret Line="104" Column="10" TopLine="104"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
@@ -297,7 +417,7 @@
     </Parsing>
   </CompilerOptions>
   <Debugging>
-    <Watches Count="3">
+    <Watches Count="4">
       <Item1>
         <Expression Value="LocalFileName"/>
       </Item1>
@@ -307,6 +427,9 @@
       <Item3>
         <Expression Value="Line"/>
       </Item3>
+      <Item4>
+        <Expression Value="RomTypeDecode"/>
+      </Item4>
     </Watches>
     <Exceptions Count="2">
       <Item1>
